Issue #25745: Fixed leaking a userptr in curses panel destructor.